# ru-u

./: .gitignore  Makefile  config.py  docker-compose.yaml  o_o.py  pyproject.toml  readme.md  template.env  template.env   tz.txt  ТЗ.txt
alembic/: env.py
alembic/versions/: 3fdcea40fc33_added_tables.py  a1133afcf1d0_added_tables.py
app/: Dockerfile  requirements.txt
app/alembic/: env.py
app/alembic/versions/: a09b724c9f57_added_tables.py
app/src/: app.py  config.py  database.py  exceptions.py
app/src/auth_service/: models.py  schema.py  services.py
app/src/color_servise/: router.py  schema.py  servises.py
app/src/palette_servise/: models.py  schema.py  servises.py
src/: app.py  config.py  database.py  db_cli.py  exceptions.py  security.py
src/auth_service/: models.py  router.py  schema.py  services.py
src/auth_service/models/: __init__.py  user_orm.py
src/authentification_servise/models/: __init__.py  user_orm.py
src/color_palette_service/models/: __init__.py  color_orm.py  palette_orm.py
src/color_palette_servise/models/: __init__.py  color_orm.py  palette_orm.py
src/color_servise/: models.py  router.py  schema.py  servises.py
src/database/tables/: base.py  color_orm.py  palette_orm.py  user_orm.py
src/palette_service/: models.py  router.py  schema.py  services.py
src/palette_servise/: models.py  router.py  schema.py  servises.py
tests/: conftest.py  test_auth.py
tests/test_auth_user/: test_login.py  test_registration.py
